<resources>
    <string name="app_name">GTX Store</string>

    <string name="navigation_drawer_open">Navigation drawer abierto</string>
    <string name="navigation_drawer_close">Navigation drawer cerrado</string>

    <!-- Google Sign-In tokens -->
    <string name="web_client_id">449884859492-ndfas2kmte0ncsg84esrbr6lo1c58lhu.apps.googleusercontent.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Login Activity messages -->
    <string name="msg_user_input_error">Usuario y/o contraseña erroneos</string>
    <string name="msg_user_input_incomplete">Por favor, complete todos los campos</string>
    <string name="msg_mismatch_passwords">Las contraseñas no coinciden</string>
    <string name="msg_new_user_duplicated">Usuario ya ingresado</string>
    <string name="msg_user_missing">No existe el usuario ingresado</string>

    <string name="txt_user_create"><u>Crear</u></string>
    <string name="txt_user_noaccount">No tienes cuenta?</string>
    <string name="txt_user_login">Iniciar sesion</string>
    <string name="txt_user_password">Contraseña</string>
    <string name="txt_user_username">Nombre de usuario</string>
    <string name="txt_user_forgotpass">No recuerdo mi contraseña</string>
    <string name="txt_newuser">Nuevo usuario</string>
    <string name="txt_newuser_username">Ingrese su usuario</string>
    <string name="txt_newuser_password">Ingrese la contraseña</string>
    <string name="txt_newuser_repassword">Ingrese nuevamente la contraseña</string>
    <string name="txt_user_signup">Crear cuenta</string>
</resources>
